--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         </div>
     </nav>
     <header>
-        <div>
+        <div class="main-title">
             <h1>Hello <span>World </span> pale blue dot.</h1>
         </div>
         <div>
