--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             <h1>Hello <span>World </span> pale blue dot.</h1>
         </div>
         <div>
-            <h2>Un podcast que explora el mundo de la programación. Nuevos episodios, todos los jueves cada 15 días.</h2>
+            <h2>Un podcast que explora el mundo de la programación<span class="txt-desktop"> y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</h2>
         </div>
         <div class="btn">
             <button><a href="">CONOCÉ MÁS</a></button>
