--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
     </nav>
     <header>
         <div class="main-title">
-            <h1>Hello <span>World </span> pale blue dot.</h1>
+            <h1>Hello <span>World</span> pale blue dot.</h1>
         </div>
         <div>
-            <h2>Un podcast que explora el mundo de la programación<span class="txt-desktop"> y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</h2>
+            <h2>Un podcast que explora el mundo de la programación<span class="txt-desktop">  y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</h2>
         </div>
         <div class="btn">
             <button><a href="">CONOCÉ MÁS</a></button>
@@ -59,8 +59,8 @@
             <div class="spotify-list">
                 <div class="spotify"> <iframe src="https://open.spotify.com/embed-podcast/episode/7AZZy2nJ4R9ZndHW0h2yxt" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe> </div>
                 <div class="spotify"> <iframe src="https://open.spotify.com/embed-podcast/episode/1ezdL2ivAGLwSE6Xbssxqt" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
-                <div class="spotify"> <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
-                <div class="spotify"> <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
+                <div class="spotify lower-pd"> <iframe src="https://open.spotify.com/embed-podcast/episode/3cWta1iiQSfvrdHaCbLkSD" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
+                <div class="spotify lower-pd"> <iframe src="https://open.spotify.com/embed-podcast/episode/31VyAQAwBiKoHVoYUCEzjQ" width="100%" height="232" frameborder="0" allowtransparency="true" allow="encrypted-media"></iframe></div>
             </div>
 
 
