--- a/index.html
+++ b/index.html
@@ -32,26 +32,26 @@
 
 
             <ul class="list-items">
-                <li class="list-item"><a href="#">Episodios</a></li>
-                <li class="list-item"><a href="#">Nosotros</a></li>
-                <li class="list-item"><a href="#">Entrevistas</a></li>
-                <li class="list-item"><a href="#">Tópicos</a></li>
+                <li class="list-item"><a href="#episodes">Episodios</a></li>
+                <li class="list-item"><a href="#us">Nosotros</a></li>
+                <li class="list-item"><a href="#invited">Entrevistas</a></li>
+                <li class="list-item"><a href="#topics">Tópicos</a></li>
             </ul>
         </div>
     </nav>
     <header>
-        <div class="main-title">
+        <div class="main-title" id="home">
             <h1>Hello <span>World</span> pale blue dot.</h1>
         </div>
         <div>
-            <h2>Un podcast que explora el mundo de la programación <span class="txt-desktop">  y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</h2>
+            <h2>Un podcast que explora el mundo de la programación<span class="txt-desktop">  y la tecnología</span>. Nuevos episodios, todos los jueves cada 15 días.</h2>
         </div>
         <div class="btn">
-            <button><a href="">CONOCÉ MÁS</a></button>
+            <button><a href="#us">CONOCÉ MÁS</a></button>
         </div>
     </header>
 
-    <section class="podcasts">
+    <section class="podcasts" id="episodes">
         <div class="bg-podcasts">
             <div class="episodes">
                 <h2>Episodios</h2>
@@ -69,14 +69,14 @@
     </section>
     <section class="floating-phone">
         <div class="spotify phone"> <img src="assets/phone.png" alt="image of a cellphone"></div>
-        <div class="about-us">
+        <div class="about-us" id="us">
             <h2>De dónde venimos</h2>
             <p>Our posturings, our imagined self-importance, the delusion that we have some privileged position in the Universe, are challenged by this point of pale light.
             </p>
             <p>Our planet is a lonely speck in the great enveloping cosmic dark. In our obscurity, in all this vastness, there is no hint that help will come from elsewhere to save us from ourselves. </p>
         </div>
     </section>
-    <section class="invited">
+    <section class="invited" id="invited">
         <h2 class="inv">Invitadas/os estelares</h2>
         <div class="fprogrammers">
             
@@ -94,13 +94,13 @@
         </div>
     </section>
 
-    <section class="icons-list">
+    <section class="icons-list" id="topics">
 
         <h2>Algunos de nuestros temas</h2>
         <div class="icons">
             <div> <img src="assets/icon1.svg" alt="Icon for remote working">
                 <h3>Trabajo remoto</h3>
-            </div class="icons">
+            </div>
             <div><img src="assets/icon2.svg" alt="Rethinking coding">
                 <h3>Repensando la programación
                 </h3>
@@ -118,17 +118,17 @@
         <div>
             <h2>¿Querés las últimas novedades?</h2>
         </div>
-        <div class="btn2"> <button><a href="">ESCUCHA LOS EPISODIOS</a></button>
+        <div class="btn2"> <button><a href="#episodes">ESCUCHA LOS EPISODIOS</a></button>
         </div>
     </section>
     <footer>
         <p>© 2019— Hello blue pale dot</p>
         <div class="social">
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-spotify"></i>
-            <i class="far fa-paper-plane"></i>
+            <a href="https://twitter.com"><i class="fab fa-twitter fa-spin"></i></a>
+            <a href="https://facebook.com"><i class="fab fa-facebook"></i></a>
+            <a href="https://instagram.com"><i class="fab fa-instagram"></i></a>
+            <a href="https://spotify.com"><i class="fab fa-spotify"></i></a>
+            <a href="https://telegram.com"><i class="far fa-paper-plane fa-pulse"></i></a>
         </div>
     </footer>
 
